.kube/services/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  labels:
    app: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      containers:
        - env:
            - name: SECRET_KEY
              value: AS;DKFJLH197H8FYOIutyo&tyouyp(8UY%&^())
            - name: ALGORITHM
              value: HS256
            - name: PLAY_TOPIC
              value: create_simulation
            - name: KAFKA_URL
              value: 10.98.46.124:9092
            - name: MONGO_HOST
              value: 10.110.60.231
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: mongodb
            - name: MONGO_PASS
              value: mongodb
            - name: MONGO_DB
              value: main
          name: worker-service
          image: xoriax/3d-shop-worker:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  labels:
    app.kubernetes.io/name: worker-service
    app.kubernetes.io/app: worker-service
spec:
  selector:
    app: worker-service
  type: ClusterIP
