.kube/services/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
        - env:
            - name: SECRET_KEY
              value: AS;DKFJLH197H8FYOIutyo&tyouyp(8UY%&^())
            - name: DB_LINK
              value: mongodb://mongodb:mongodb@10.110.60.231:27017/main
            - name: ALGORITHM
              value: HS256
            - name: S3_BUCKET_NAME
              value: test-bucket
            - name: S3_URL
              value: s3.labofdev.ru
            - name: MINIO_ACCESS_KEY
              value: NCitCJJY49q8ZY4YiLP4
            - name: MINIO_SECRET_KEY
              value: GdUd3KB6KJOEAP7YStpJmAO9QFX9C25EId2XXn5C
            - name: PLAY_TOPIC
              value: create_simulation
            - name: KAFKA_URL
              value: 10.98.46.124:9092
            - name: MONGO_HOST
              value: 10.110.60.231
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: mongodb
            - name: MONGO_PASS
              value: mongodb
            - name: MONGO_DB
              value: main
          name: backend-service
          image: xoriax/3d-shop-backend:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app.kubernetes.io/name: backend-service
    app.kubernetes.io/app: backend-service
spec:
  selector:
    app: backend-service
  type: ClusterIP
  ports:
    - name: http
      targetPort: 4001
      port: 4001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 256m
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  labels:
    app.kubernetes.io/name: backend-service
    app.kubernetes.io/app: backend-service
  name: backend-service
spec:
  ingressClassName: nginx
  rules:
    - host: api.labofdev.ru
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  number: 4001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.labofdev.ru
      secretName: api.labofdev.ru
