.kube/services/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
  labels:
    app: front-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
        - name: front-service
          image: xoriax/3d-shop-frontend:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app.kubernetes.io/name: front-service
    app.kubernetes.io/app: front-service
spec:
  selector:
    app: front-service
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 256m
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  labels:
    app.kubernetes.io/name: front-service
    app.kubernetes.io/app: front-service
  name: front-service
spec:
  ingressClassName: nginx
  rules:
    - host: auth.labofdev.ru
      http:
        paths:
          - backend:
              service:
                name: front-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - auth.labofdev.ru
      secretName: auth.labofdev.ru
